--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,58 @@
 #root {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
-  padding: 2rem;
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.App{
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-content: center;
+  align-items: center;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
+.qr-card{
+  width: 300px;
+  background-color: hsl(0, 0%, 100%) ;
+  border-radius: 15px;
+  margin-top: 150px;
+  padding: 20px;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  align-content:normal;
+  align-items: center;
+}
+
+.card-img{
+  border-radius: 15px;
+  width: 300px;
+}
+h1{
+  font-weight: 700;
+  margin-bottom: 0;
+}
+
+.card-desc{
+  color: hsl(220, 15%, 55%);
+  width: 250px;
+  height: auto;
+  font-size: 15px;
+}
+
+@media (max-width: 375px) {
+  .qr-card{
+    width: 250px;
+    padding: 15px;
   }
-  to {
-    transform: rotate(360deg);
+  .card-img{
+    width: 250px;
   }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
+  .card-desc{
+    width: 250px;
   }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
+  h1{
+    font-size: 1.3em;
+  }
 }
