--- a/src/App.css
+++ b/src/App.css
@@ -23,6 +23,7 @@
   justify-content: center;
   align-content:normal;
   align-items: center;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 .card-img{
